--- a/package.json
+++ b/package.json
@@ -22,20 +22,8 @@
     "typescript": "~4.4.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.121.0",
+    "aws-cdk-lib": "^2.0.0",
     "@aws-cdk/aws-codepipeline": "^1.121.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.121.0",
-    "@aws-cdk/aws-cognito": "^1.121.0",
-    "@aws-cdk/aws-dynamodb": "^1.121.0",
-    "@aws-cdk/aws-iam": "^1.121.0",
-    "@aws-cdk/aws-lambda": "^1.121.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.121.0",
-    "@aws-cdk/aws-s3": "^1.121.0",
-    "@aws-cdk/aws-s3-deployment": "^1.121.0",
-    "@aws-cdk/aws-s3-notifications": "^1.121.0",
-    "@aws-cdk/aws-sqs": "^1.121.0",
-    "@aws-cdk/core": "^1.121.0",
-    "@aws-cdk/pipelines": "^1.121.0",
-    "source-map-support": "^0.5.19"
+    "@aws-cdk/aws-codepipeline-actions": "^1.121.0"
   }
 }
