--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "outputs": "aws cloudformation describe-stacks --stack-name dev-AwsdevhourBackendPipelineStage | jq '.Stacks | .[] | .Outputs | reduce .[] as $i ({}; .[$i.OutputKey] = $i.OutputValue)'"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^2.68.0",
     "@types/jest": "^29.5.10",
     "@types/node": "20.9.5",
     "aws-cdk": "^2.110.1",
@@ -22,20 +21,7 @@
     "typescript": "~5.3.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-codepipeline": "^1.203.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.203.0",
-    "@aws-cdk/aws-apigatewayv2": "^1.204.0",
-    "@aws-cdk/aws-cognito": "^1.203.0",
-    "@aws-cdk/aws-dynamodb": "^1.203.0",
-    "@aws-cdk/aws-iam": "^1.203.0",
-    "@aws-cdk/aws-lambda": "^1.203.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.203.0",
-    "@aws-cdk/aws-s3": "^1.203.0",
-    "@aws-cdk/aws-s3-deployment": "^1.203.0",
-    "@aws-cdk/aws-s3-notifications": "^1.203.0",
-    "@aws-cdk/aws-sqs": "^1.203.0",
-    "@aws-cdk/core": "^1.203.0",
-    "@aws-cdk/pipelines": "^1.203.0",
-    "source-map-support": "^0.5.21"
+    "aws-cdk-lib": "^2.0.0",
+    "constructs": "^10.0.0"
   }
 }
